--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,6 @@
 	<!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.css" rel="stylesheet"/>
-	<link href="./stylesheets/home.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -124,10 +123,10 @@
 	  </div>
 	</header>
 
-  <img src="./images/Contact.png" class="d-none d-md-block" style="position:absolute; top:20%; right:20%; height:70px; animation: book 2s ease-in-out infinite;" >
-  <img src="./images/Competitions.png" class="d-none d-md-block" style="position:absolute; top:60%; right:90%; height:70px; animation: book 2s ease-in-out infinite;" >
-  <img src="./images/Initiatives.png" class="d-none d-md-block" style="position:absolute; top:60%; right:2%; height:70px; animation: book 2s ease-in-out infinite;" >
-  <img src="./images/workshops.png" class="d-none d-md-block" style="position:absolute; top:20%; right:80%; height:70px; animation: book 2s ease-in-out infinite;">
+  <img src="./images/contact1.png" class="d-none d-md-block" style="position:absolute; top:20%; right:20%; height:70px; animation: book 2s ease-in-out infinite;" >
+  <img src="./images/competitions1.png" class="d-none d-md-block" style="position:absolute; top:60%; right:90%; height:70px; animation: book 2s ease-in-out infinite;" >
+  <img src="./images/initiatives1.png" class="d-none d-md-block" style="position:absolute; top:60%; right:2%; height:70px; animation: book 2s ease-in-out infinite;" >
+  <img src="./images/workshops1.png" class="d-none d-md-block" style="position:absolute; top:20%; right:80%; height:70px; animation: book 2s ease-in-out infinite;">
 
    
   <div id="particles-background" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
