--- a/views/sciencetoons.ejs
+++ b/views/sciencetoons.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Valorant | Wissenaire’21</title>
+	<title>Pioneers Plan | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -125,7 +125,7 @@
 		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
 		<div class="row" style="padding: 0px; margin:0px;">
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-			  <a class='ar' href="/shutter" style="display: block; text-align: center;"> Shutter &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+			  <a class='ar' href="/schoolchamp" style="display: block; text-align: center;"> School Champ &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M23.125 16.1428H12.7431L15.922 12.4056C16.2318 12.0422 16.181 11.5014 15.81 11.1988C15.4381 10.8953 14.8869 10.9451 14.578 11.3085L10.203 16.4514C10.1689 16.4917 10.1514 16.5388 10.126 16.5834C10.105 16.6194 10.0796 16.6502 10.0639 16.6897C10.0245 16.7882 10.0009 16.892 10.0009 16.9965C10.0009 16.9974 10 16.9991 10 17C10 17.0008 10.0009 17.0025 10.0009 17.0034C10.0009 17.108 10.0245 17.2117 10.0639 17.3102C10.0796 17.3497 10.105 17.3805 10.126 17.4165C10.1514 17.4611 10.1689 17.5082 10.203 17.5485L14.578 22.6914C14.7513 22.8946 14.9998 23 15.25 23C15.4478 23 15.6464 22.9349 15.81 22.8011C16.181 22.4986 16.2318 21.9577 15.922 21.5943L12.7431 17.8571H23.125C23.608 17.8571 24 17.4731 24 17C24 16.5268 23.608 16.1428 23.125 16.1428Z" fill="white"/>
 				<path d="M32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80152 32.25 0.75 25.1985 0.75 16.5C0.75 7.80151 7.80152 0.75 16.5 0.75C25.1985 0.75 32.25 7.80151 32.25 16.5Z" stroke="white" stroke-width="1.5"/>
 				</svg> </a>
@@ -137,24 +137,24 @@
 						<div class="col-12 col-md-6 d-flex justify-content-center align-self-center">
 							<div class="row">
 								<div class="col-12">
-									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Valorant</h2>
+									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Science Toons</h2>
 								</div><br><br>
 								
 							</div>							
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/Valorant.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/pioneersplan.jpg"></a>
 						</div>
 					</div>
 				
 				</div>
 			</div>
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-		  		<a class='ar' href="/analogcircuitdesign" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+		  		<a class='ar' href="/sherlock" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M9.875 16.8572L20.2569 16.8572L17.078 20.5944C16.7682 20.9578 16.819 21.4986 17.19 21.8012C17.5619 22.1046 18.1131 22.0549 18.422 21.6915L22.797 16.5486C22.8311 16.5083 22.8486 16.4612 22.874 16.4166C22.895 16.3806 22.9204 16.3498 22.9361 16.3103C22.9755 16.2118 22.9991 16.108 22.9991 16.0035C22.9991 16.0026 23 16.0009 23 16C23 15.9992 22.9991 15.9975 22.9991 15.9966C22.9991 15.892 22.9755 15.7883 22.9361 15.6898C22.9204 15.6503 22.895 15.6195 22.874 15.5835C22.8486 15.5389 22.8311 15.4918 22.797 15.4515L18.422 10.3086C18.2488 10.1054 18.0003 10 17.75 10C17.5523 10 17.3536 10.0651 17.19 10.1989C16.819 10.5014 16.7683 11.0423 17.078 11.4057L20.2569 15.1429L9.875 15.1429C9.392 15.1429 9 15.5269 9 16C9 16.4732 9.392 16.8572 9.875 16.8572Z" fill="white"/>
 				<path d="M0.749998 16.5C0.749998 7.80151 7.80151 0.750002 16.5 0.750002C25.1985 0.750003 32.25 7.80152 32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80151 32.25 0.749997 25.1985 0.749998 16.5Z" stroke="white" stroke-width="1.5"/>
-				</svg> &nbsp;Analog Circuit Design
+				</svg> &nbsp; Sherlock
 				</a>
 			</div>
 		</div>
@@ -171,14 +171,20 @@
 	
 
 	<div class="container" id="intro">
-		<p style="color: white; font-size: 18px;text-align: center; font-style: italic;">Are you a hardcore gamer? Does the rattle of guns turn you on?<br></p>
+		<p style="color: white; font-size: 18px;text-align: center; font-style: italic;">“A sense of humour is a sense of proportion.” - -KHALIL GIBRAN<br></p>
 		<p style="color: white; font-size: 18px;">
-            The time has come to blend your style and experience on a global competitive stage. Enter the
-            Battlefield and show your mettle in this virtual war. You have 13 rounds to attack and defend your
-            side using sharp gunplay and tactical abilities. And, with one life per round, you’ll need to think
-            faster than your opponent if you want to survive. So, what are you waiting for? Build the baddest
-            squad, pick a badass agent, gear up and ready your guns as Wissenaire'21 brings to you Valorant.
-            Battle hard and be the last one standing!!</p>
+            Do you want to express your scientific knowledge in the form of cartoons? Excited! Then you
+have come to the right place.<br>
+Nowadays in social media the “MEMES” are very popular. Here you can show some creativity.<br>
+Scientoons are the cartoons/memes that provide scientific knowledge in a humorous way.<br>
+They look funny but at the same time provide information about new inventions, researches
+and technology updates.<br>
+They not only make you smile and laugh but also provide information about new researches,
+subjects, Data and concepts in a simple understandable and interesting thought provoking
+way.<br>
+Wissenaire’21 provides you a platform to use your scientific knowledge and humour both
+together to create your own Scientoon (science + cartoon).<br>
+CREATIVITY IS THE POWER OF HUMAN BEING ............USE IT WISELY.</p>
 
 		
 		<div class="row" style="margin-top: 10vh;">
@@ -219,7 +225,7 @@
 							}
 						</script>
 							<% } %>
-					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Valorant.pdf';">
+					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Pioneers Plan.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
@@ -227,51 +233,48 @@
 				</div>
 			</div>
 			<div class="col-12 col-md-6" style="margin-top: 2.5%;">
-				<p style="color: white; font-weight: 650; font-size: 28px;">Tournament Procedure</p>
-				<p style="color:#fff;">● The tournament will be held ONLINE over a single day and the date and time of
-                    which will be intimated.<br>
-                    ● The tournament will consist of many rounds depending on the number of
-                    participating teams.</p>
 				
-				<p style="color: white; font-weight: 650; font-size: 28px;"> Round Format </p>
-				<p style="color:#fff; line-height: 2;"> ● Each set of teams will play up to 3 games of 5v5 Standard Valorant mode
-                    against each other in different maps.<br>
-                    ● The map will be decided on the spot from the pool of maps given. (2 chosen by the
-                    teams and the third chosen by the organizers).<br>
-                    ● Best of 3 will be the winner.<br>
-                    ● Whichever team loses twice will be eliminated.</p>
-                    
-                <p style="color: white; font-weight: 650; font-size: 28px;"> Maps </p>
-                <p style="color:#fff; line-height: 2;">Ascent, Bind, Haven, Icebox, Split</p>
+				
+				<p style="color: white; font-weight: 650; font-size: 28px;"> Event Format </p>
+				<p style="color:#fff; line-height: 2;"> ROUND 1:<br>
+                    • This is an online event where participants have to submit their Scientoons to
+competitions.wissenaire@gmail.com with the subject of mail as “Scientoon – Registration Id”. <br>
+Last date of submission is 19th March, 2021.<br>
+• Results will be declared momentarily after the last date of submission.<br></p>
 
-
+                <p style="color: white; font-weight: 650; font-size: 28px;">Judging Criteria</p>
+                <p style="color:#fff;">Score will be given on originality, theme, art and humour conforming to technical correspondence
+                    of the Scientoon. Any copied Scientoon will be discarded. Decisions made by competition judges
+                    and testers are final. There is no dispute resolution process, however, input for process
+                    improvement is encouraged. </p>
 				
 				
 			</div>
 			<div class="col-12 col-md-6">
 				<br>
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Rules </p>
-				<p style="color:#fff; line-height: 2;"><i class="fa fa-check"></i> The software used is Valorant by riot. (current updated version)<br>
-				<i class="fa fa-check"></i> It is a 5 Player Team Tournament (no substitutes).<br>
-				<i class="fa fa-check"></i> Each team must present 1 representative. He/ she is responsible for his/her team
-                and will be responsible for choosing maps and all communication with authorities
-                must be done through the team captain.<br>
-				<i class="fa fa-check"></i> The first team to win 13 rounds (in-game) will be declared the victor of the match and will
-                advance.<br>
-                <i class="fa fa-check"></i> The initial fixtures are knockouts and only one map is played. Best of 3 is played for
-                the semis and the finals.<br>
-                <i class="fa fa-check"></i> The map each team will play will be picked through a map vote.<br>
-                <i class="fa fa-check"></i> Overtime – In case of a draw after 24 rounds, it goes to overtime for 2 rounds. Overtime is
-                continued till there is a result. For the start of the overtime, teams will stay on the side
-                which they played the previous half on, during half-time sides will be swapped.	
+				<p style="color:#fff; line-height: 2;"><i class="fa fa-check"></i> Scientoon has to be submitted in JPEG format with the following three sections: Left: This
+                    should explain the scientific concept related to your Scientoon. Right: This should have the
+                    scanned copy of the hand drawn sketch of the Scientoon. Bottom: This should contain the
+                    humour related to the content of the Scientoon.<br>
+                    <i class="fa fa-check"></i> The name of the submission file should be the theme of the Scientoon.<br>
+                    <i class="fa fa-check"></i> The hand drawn sketch should be clearly visible in the final submission file.<br>
+                    <i class="fa fa-check"></i> The event has no specific theme but the chosen theme for the Scientoon should be related to
+                    science and technology.<br>
+                    <i class="fa fa-check"></i> One participant is allowed to submit more than one entry.<br>
+                    <i class="fa fa-check"></i> The entry should not be copied from any sources in any form. This could lead direct rejection
+                    of the entry.<br>
+                    <i class="fa fa-check"></i> The participant should clearly mention his/her Name and Name of Institute he/she belongs to,
+                    in the mail.
+					
 			</div>
 
 			<div class="col-12 col-md-6">
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Contact</p>
-				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;A. Rohan Reddy<br>
+				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;Satya Bhagavan<br>
 				<i class="fa fa-award"></i>&ensp;Event Co-ordinator<br>
-				<i class="fa fa-envelope"></i>&ensp;arr10@iitbbs.ac.in<br>
-				<i class="fa fa-phone"></i>&ensp;7702825377</p>
+				<i class="fa fa-envelope"></i>&ensp;msb12@iitbbs.ac.in<br>
+				<i class="fa fa-phone"></i>&ensp;9346916507</p>
 			</div>
 		</div>
 	
