--- a/views/acd.ejs
+++ b/views/acd.ejs
@@ -13,6 +13,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
 	<style>
@@ -144,7 +145,7 @@
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/pic1.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/analog.jpg"></a>
 						</div>
 					</div>
 				
@@ -192,10 +193,30 @@
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
 					 <% } else{ %>
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="window.location.href='/auth/google';">
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
+					<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+					<script>
+						function alert(){
+
+							swal({
+								title: "Authentication Required",
+								text: "You haven't logged in or you haven't filled your profile !",
+								icon: "warning",
+								button: "Do it now :)",
+								dangerMode: true,
+							})
+							.then((button) => {
+								if (button) {
+									window.location.href= "/auth/google"
+								} else {
+									swal("Your imaginary file is safe!");
+								}
+							});
+						}
+					</script>
 						<% } %>
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Analog Circuit Design.pdf';">
 						Know More
@@ -240,6 +261,8 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 	<script src="./javascripts/jquery.min.js"></script>
+	<script type="text/javascript" src="./javascripts/canvas.js"></script>  
+
 	<script>
 	
 	</script>
