--- a/views/sherlock.ejs
+++ b/views/sherlock.ejs
@@ -125,7 +125,7 @@
 		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
 		<div class="row" style="padding: 0px; margin:0px;">
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-			  <a class='ar' href="/schoolchamp" style="display: block; text-align: center;"> School Champ &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+			  <a class='ar' href="/sciencetoons" style="display: block; text-align: center;"> ScienceToons &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M23.125 16.1428H12.7431L15.922 12.4056C16.2318 12.0422 16.181 11.5014 15.81 11.1988C15.4381 10.8953 14.8869 10.9451 14.578 11.3085L10.203 16.4514C10.1689 16.4917 10.1514 16.5388 10.126 16.5834C10.105 16.6194 10.0796 16.6502 10.0639 16.6897C10.0245 16.7882 10.0009 16.892 10.0009 16.9965C10.0009 16.9974 10 16.9991 10 17C10 17.0008 10.0009 17.0025 10.0009 17.0034C10.0009 17.108 10.0245 17.2117 10.0639 17.3102C10.0796 17.3497 10.105 17.3805 10.126 17.4165C10.1514 17.4611 10.1689 17.5082 10.203 17.5485L14.578 22.6914C14.7513 22.8946 14.9998 23 15.25 23C15.4478 23 15.6464 22.9349 15.81 22.8011C16.181 22.4986 16.2318 21.9577 15.922 21.5943L12.7431 17.8571H23.125C23.608 17.8571 24 17.4731 24 17C24 16.5268 23.608 16.1428 23.125 16.1428Z" fill="white"/>
 				<path d="M32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80152 32.25 0.75 25.1985 0.75 16.5C0.75 7.80151 7.80152 0.75 16.5 0.75C25.1985 0.75 32.25 7.80151 32.25 16.5Z" stroke="white" stroke-width="1.5"/>
 				</svg> </a>
@@ -144,7 +144,7 @@
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/pic1.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/Sherlock.jpg"></a>
 						</div>
 					</div>
 				
@@ -193,12 +193,32 @@
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					 <% } else{ %>
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="window.location.href='/auth/google';">
-						Register
-						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
-					</button>
-						<% } %>
+					<% } else{ %>
+						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
+							Register
+							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
+						</button>
+						<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+						<script>
+							function alert(){
+	
+								swal({
+									title: "Authentication Required",
+									text: "You haven't logged in or you haven't filled your profile !",
+									icon: "warning",
+									button: "Do it now :)",
+									dangerMode: true,
+								})
+								.then((button) => {
+									if (button) {
+										window.location.href= "/auth/google"
+									} else {
+										swal("Your imaginary file is safe!");
+									}
+								});
+							}
+						</script>
+							<% } %>
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Sherlock.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
@@ -249,6 +269,8 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 	<script src="./javascripts/jquery.min.js"></script>
+	<script type="text/javascript" src="./javascripts/canvas.js"></script>  
+
 	<script>
 	
 	</script>
