--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,7 +133,7 @@
   <div id="particles-foreground" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
   
   <div id="gifimage" style="z-index:-10">
-	<img class="justify-content-center align-self-center" id="gifimage" src="./images/final.gif">
+	<img class="justify-content-center align-self-center" id="gifimage" src="./images/FINAL.gif">
   </div>
    
   <script type="text/javascript" src="./javascripts/canvas.js"></script>  
