--- a/views/acd.ejs
+++ b/views/acd.ejs
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
+	<link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
+
 	<style>
 		@media screen and (max-width: 500px){
 			.page-navigation-menu > ul > li {
