--- a/views/comingsoon.ejs
+++ b/views/comingsoon.ejs
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   	<link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
+
 	<style>
 		html {
             margin: 0;
