--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
   	<link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
     <link href="./stylesheets/canvas.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
+	<link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
   <style>
     body{
 		width: 100vw;
