--- a/views/sciencetoons.ejs
+++ b/views/sciencetoons.ejs
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
+
 	<style>
 		@media screen and (max-width: 500px){
 			.page-navigation-menu > ul > li {
