--- a/public/stylesheets/workshop.css
+++ b/public/stylesheets/workshop.css
@@ -8,13 +8,8 @@
 
 html {
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  font-size: 62.5%;
-}
-@media only screen and (max-width: 800px) {
-  html {
-    font-size: 57%;
-  }
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
 }
 
 body {
