--- a/public/stylesheets/workshop.css
+++ b/public/stylesheets/workshop.css
@@ -8,8 +8,13 @@
 
 html {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 800px) {
+  html {
+    font-size: 57%;
+  }
 }
 
 body {
