--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -118,7 +118,7 @@
                         <button onclick="window.location.href='/aiml'">KNOW MORE</button>
                     </div>
 
-                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/aiml.jpg');"></div></div>
+                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/aiml.jpg'); background: cover;"></div></div>
                 </div>
                                 
                 
@@ -137,7 +137,7 @@ practically working on it.
                         <button onclick="window.location.href='/automobiles'">KNOW MORE</button>
                     </div>
 
-                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/automobiles.jpeg');"></div></div>
+                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/automobiles.jpeg');background: cover;"></div></div>
                 </div>
                                 
                 <div class="box3 box">
@@ -155,7 +155,7 @@ languages and tools allow cross-platform app support (i.e. for both Android and 
                         <button onclick="window.location.href='/android'">KNOW MORE</button>
                     </div>
 
-                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/android.jpg');"></div></div>
+                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/android.jpg');background: cover;"></div></div>
                 </div>
                                 
                 <div class="box4 box">
@@ -174,7 +174,7 @@ bridges.
                         <button onclick="window.location.href='/bridgedesign'">KNOW MORE</button>
                     </div>
 
-                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/bridgedesign.jpg');"></div></div>
+                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/bridgedesign.jpg');background: cover;"></div></div>
                 </div>
                                 
                 <div class="box5 box">
@@ -189,7 +189,7 @@ opportunity and employment opportunities for about a million professionals by 20
                         <button onclick="window.location.href='/cybersecurity'">KNOW MORE</button>
                     </div>
 
-                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/cybersecurity.jpg');"></div></div>
+                    <div class="illustration"><div class="inner" style="background-image:url('../public/images/cybersecurity.jpg');background: cover;"></div></div>
                 </div>
                                 
             </div>
