--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -17,7 +17,15 @@
   <link rel="stylesheet" type="text/css" href="./stylesheets/eventspage/onnet.css">
   <link rel="stylesheet" type="text/css" href="./stylesheets/eventspage/exsu.css">
   <link rel="stylesheet" type="text/css" href="./stylesheets/eventspage/img.css">
-  
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
+  <link href="./stylesheets/canvas.css" rel="stylesheet">
+  <link href="./stylesheets/navbar.css" rel="stylesheet">
+  <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   
@@ -96,8 +104,40 @@
 
   </style>
 
-
+<style>
+    body{
+		width: 100vw;
+		background-color: rgb(0, 0, 0);
+    }
+	a:hover{
+		text-decoration: none !important;
+	}
+	.gifdiv{
+		width: 100vw;
+	}
+	#gifimage{
+		display: block;
+		margin: auto; 
+		width: 65%;
+		height: auto;
+	}
+	@media screen and (max-width: 500px) {
+		.gifdiv{
+			width: 100vw;
+		}
+		#gifimage{
+			display: block;
+			margin: auto; 
+			width: 100%;
+			height: auto;
+			position: relative;
+			top: 15%;
+		}
+			
+	}
+  </style>
 </head>
+
 
 <body style="background: black;">
 <script>
@@ -107,6 +147,80 @@
 <div id="particles-background" class="vertical-centered-box" ></div> 
 <div id="particles-foreground" class="vertical-centered-box" ></div> 
 </div>
+
+<header style="height: 1vh !important;">
+    <div id="navigation" class="">
+        <a class="menu-toggle">
+            <div class="btn-toggle">
+                <div>
+                    <div class="before"></div>
+                    <div class="after"></div>
+                </div>
+            </div>
+        </a>
+        <nav role="navigation" aria-labelledby="block-butterfly-main-menu-menu" id="block-butterfly-main-menu" class="page-navigation-menu block block-menu navigation menu--main">
+                    
+          <h2 class="visually-hidden" id="block-butterfly-main-menu-menu">Main navigation</h2>
+          <ul>
+              <% if(participant.name) { %>
+            <li class="open">
+                <i class="icofont-ui-user"></i><br><br><a href="/profile">My Profile</a>
+              </li>
+              <% } else { %>
+            <li class="open">
+              <i class="icofont-sign-in"></i><br><br><a href="/auth/google">Sign In</a>
+            </li>
+              <% } %>
+            <li>
+              <i class="icofont-info-circle"></i><br><br><a href="/about">About</a>
+            </li>
+            <li>
+              <i class="icofont-puzzle"></i><br><br><a href="/competitions" data-drupal-link-system-path="node/4">Competitions</a>
+            </li>
+            <li>
+              <i class="icofont-learn"></i><br><br><a href="/workshops" data-drupal-link-system-path="case-studies">Workshops</a>
+            </li>
+            <li>
+              <i class="icofont-mic"></i><br><br><a href="/guestlectures" data-drupal-link-system-path="blog">Guest Lectures</a>
+            </li>
+            <li>
+              <i class="icofont-robot"></i><br><br><a href="/exhibits" data-drupal-link-system-path="contact/contact_us">Exhibits</a>
+            </li>
+            
+            <li>
+              <i class="icofont-light-bulb"></i><br><br><a href="/initiatives" data-drupal-link-system-path="contact/contact_us">Initiatives</a>
+            </li>
+            <li>
+              <i class="icofont-star-alt-1"></i><br><br><a href="/highlights" data-drupal-link-system-path="contact/contact_us">Highlights</a>
+            </li>
+            <li>
+              <i class="icofont-live-support"></i><br><br><a href="ca.wissenaire.org" data-drupal-link-system-path="contact/contact_us">Campus Ambassador</a>
+            </li>
+            <li>
+              <i class="icofont-speech-comments"></i><br><br><a href="/team" data-drupal-link-system-path="contact/contact_us">Team</a>
+            </li>
+            <li>
+              <i class="icofont-money"></i><br><br><a href="/sponsors" data-drupal-link-system-path="contact/contact_us">Sponsors'20</a>
+            </li>
+            <li>
+              <i class="icofont-send-mail"></i><br><br><a href="/contact" data-drupal-link-system-path="contact/contact_us">Reach us</a>
+            </li>
+
+          </ul>
+        </nav>
+        
+        <div id="block-butterfly-branding" class="site-branding block block-system block-system-branding-block">
+            <a href="/" title="Home" rel="home" class="site-branding__logo"> 
+        <dpan class="sr-only">Wissenaire logo</dpan>
+      </a>
+    </div>
+    <div class="menu-slide-back">
+      <span class="icon icon-fonts icon-arrow-back">
+        <span class="sr-only">go back to previous menu</span>
+      </span>
+    </div>
+  </div>
+</header>
 
 <div class="container" > 
   
@@ -675,5 +789,9 @@ Battle hard and be the last one standing!! </p></div>
 
   	
     <script src="./javascripts/canvas.js" ></script>
+    <script type="text/javascript" src="./javascripts/canvas.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <script src="./javascripts/jquery.min.js"></script>
+
 </body>
 </html>
