--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -144,10 +144,9 @@
 <script>
   AOS.init();
 </script> 
-<div class="canvaswrapper">
-<div id="particles-background" class="vertical-centered-box" ></div> 
-<div id="particles-foreground" class="vertical-centered-box" ></div> 
-</div>
+<div id="particles-background" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
+<div id="particles-foreground" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
+
 
 <header style="height: 1vh !important;">
     <div id="navigation" class="">
