--- a/views/automob.ejs
+++ b/views/automob.ejs
@@ -147,7 +147,7 @@
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/automobiles.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/automobiles.jpeg"></a>
 						</div>
 					</div>
 				
@@ -191,7 +191,7 @@ practically working on it.</p>
 				<div class="row">
 					<% console.log(participant);
 					 if (participant.name) { %>
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('analog-circuit-design-132014');">
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('automobiles-electric-vehicles-121432');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
