--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -8,19 +8,22 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">	
         <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.css" rel="stylesheet"/>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-          <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
         <link href="./stylesheets/canvas.css" rel="stylesheet">
+
+          <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
         <link href="./stylesheets/navbar.css" rel="stylesheet">
         <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./stylesheets/workshop.css">
         
         <title>Workshops | Wissenaire'21</title>
+        <style>
+            @media screen and (min-width: 425px){
+                #open{
+                    margin-top:120px;
+                }
+            }
+        </style>
     </head>
     <body>
         <header style="height: 1vh !important;">
@@ -102,7 +105,7 @@
         <div id="particles-foreground" class="vertical-centered-box"><canvas class="pg-canvas"  height="303" style="display: block;"></canvas></div>
   
         
-        <div class="container"> 
+        <div class="container" id="open"> 
             <div class="slider">
 
                 <div class="box1 box">
