--- a/views/bridge.ejs
+++ b/views/bridge.ejs
@@ -190,7 +190,7 @@ bridges.</p>
 				<div class="row">
 					<% console.log(participant);
 					 if (participant.name) { %>
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('analog-circuit-design-132014');">
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('bridge-design-024120');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
