--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -2,21 +2,14 @@
 <html>
 <head>
 	<title>Events W'21</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.css" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
-  <link href="./stylesheets/canvas.css" rel="stylesheet">
   <link href="./stylesheets/navbar.css" rel="stylesheet">
   <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -36,34 +29,6 @@
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
-}
-
-
-  	#particles-background,
-#particles-foreground {
-  position: fixed;
-  left: -51%;
-  top: -51%;
-  width: 202%;
-  height: 202%;
-  -webkit-transform: scale3d(0.5, 0.5, 1);
-  -moz-transform: scale3d(0.5, 0.5, 1);
-  -ms-transform: scale3d(0.5, 0.5, 1);
-  -o-transform: scale3d(0.5, 0.5, 1);
-  transform: scale3d(0.5, 0.5, 1);
-  overflow:hidden;
-}
-#particles-background {
-  background: transparent;
-  overflow:hidden;
-}
-.canvaswrapper{
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
 }
 
 .knowmore {
@@ -101,42 +66,18 @@
 
   }
 }
-
-
-  </style>
-
-<style>
     body{
 		width: 100vw;
 		background-color: rgb(0, 0, 0);
     }
-	a:hover{
-		text-decoration: none !important;
-	}
-	.gifdiv{
-		width: 100vw;
-	}
-	#gifimage{
-		display: block;
-		margin: auto; 
-		width: 65%;
-		height: auto;
-	}
-	@media screen and (max-width: 500px) {
-		.gifdiv{
-			width: 100vw;
-		}
-		#gifimage{
-			display: block;
-			margin: auto; 
-			width: 100%;
-			height: auto;
-			position: relative;
-			top: 15%;
-		}
-			
-	}
+    @media screen and (min-width: 425px){
+        .container{
+            margin-top:120px;
+        }
+    }
+
   </style>
+
 </head>
 
 
@@ -222,7 +163,7 @@
   </div>
 </header>
 
-<div class="container" > 
+<div class="container" id="open"> 
   
 		<div class="row ">
 			<div class="col-lg-6 col-sm-12  d-flex justify-content-center ">
@@ -788,7 +729,6 @@ Battle hard and be the last one standing!! </p></div>
 
 
   	
-    <script src="./javascripts/canvas.js" ></script>
     <script type="text/javascript" src="./javascripts/canvas.js"></script>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
     <script src="./javascripts/jquery.min.js"></script>
